--- a/responsive.css
+++ b/responsive.css
@@ -1,3 +1,6 @@
+@media screen and (min-device-width: 1800px) and (max-device-width: 2200px) {
+    @content;
+}
 
 @media (max-width: 1600px) and (min-width: 1280px) {
     @content;
